# minco_trajectory_planner

./: CMakeLists.txt  Doxyfile  gcopter.hpp  geo_utils.hpp  main  main.cpp  minco.hpp  perf.data  report.txt  trajectory.csv  trajectory.hpp  trajectory_2d.csv  trajectory_extra.csv
html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  annotated.html  classPiece-members.html  classPiece.html  classPiece__coll__graph.map  classPiece_a0143c8e8e0b573265abf0ebeb4d46fd6_cgraph.map  classPiece_a0143c8e8e0b573265abf0ebeb4d46fd6_cgraph.md5  classPiece_a05ddcb2ffa2331defdc3686cad05d00e_icgraph.map  classPiece_a05ddcb2ffa2331defdc3686cad05d00e_icgraph.md5  classPiece_a17ab197332f79951caa7b968ec58a358_cgraph.map  classPiece_a17ab197332f79951caa7b968ec58a358_cgraph.md5  classPiece_aae7658323ee3934140a7374150c5908f_icgraph.map  classPiece_aae7658323ee3934140a7374150c5908f_icgraph.md5  classPiece_aaf744bc7ea65590fda82980adbb2ca30_cgraph.map  classPiece_aaf744bc7ea65590fda82980adbb2ca30_cgraph.md5  classPiece_ac8c3eb5e63cae834347b125621c2ab2a_cgraph.map  classPiece_ac8c3eb5e63cae834347b125621c2ab2a_cgraph.md5  classPiece_ad4a0ea8fdef3e3f28482b1517b6e9f4e_icgraph.map  classPiece_ad4a0ea8fdef3e3f28482b1517b6e9f4e_icgraph.md5  classPiece_ae722aaeced88e3778be8769a836d01b8_icgraph.map  classPiece_ae722aaeced88e3778be8769a836d01b8_icgraph.md5  classTrajectory-members.html  classTrajectory.html  classTrajectory__coll__graph.map  classTrajectory__coll__graph.md5  classTrajectory_a0a6291b71f1dd98acfdfa12fefd8b4ef_cgraph.map  classTrajectory_a0a6291b71f1dd98acfdfa12fefd8b4ef_cgraph.md5  (+474 more)
(+339 files in other folders)
